fix placeholder text overflow in Newsletter

--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -50,6 +50,11 @@
 }
 
 // Media Queries
+@mixin xs {
+  @media (max-width: #{$xs}) {
+    @content;
+  }
+}
 @mixin sm {
   @media (min-width: #{$sm}) {
     @content;
