--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -6,6 +6,7 @@ $floral-white: #f8f5ee;
 $timberwolf: #d4d0cc;
 
 // BREAKPOINTS
+$xs: 420px; // 420px and below
 $sm: 560px;
 $md: 768px;
 $lg: 1024px;
